# multitenant-auth-service

./: .env.sample  .gitignore  Multitenant-Auth.postman_collection.json  README.md  docker-compose.yml
backend/: alembic.ini  dockerfile  main.py  pyproject.toml
backend/apis/info/: info_endpoints.py  info_schemas.py
backend/apis/members/: members_endpoints.py  members_schemas.py
backend/apis/stats/: stats_endpoints.py  stats_schemas.py
backend/apis/user/: user_endpoints.py  user_schemas.py
backend/domain/: auth_service.py  crud_service.py
backend/infra/db/: database.py  env.py  models.py
backend/infra/db/versions/: 7b4ed7efb74d_create_mail_queue_table.py  f9f8494f30d8_generate_initial_tables.py
backend/usecase/base/: usecase_base.py
backend/usecase/stats/: org_wise_case.py  org_wise_role_wise_case.py  role_wise_case.py
backend/usecase/user/: create_organization_case.py  create_user_case.py  delete_member_case.py  invite_member_case.py  reset_password_case.py  signin_user_case.py  update_member_role_case.py
backend/utils/: email.py  password.py  time.py
