[tool.poetry]
name = "multitenant-auth-service"
version = "0.1.0"
description = ""
authors = ["somil.gupta <somil2760@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
sqlalchemy = {extras = ["mypy"], version = "^2.0.34"}
sqlalchemy-utils = "^0.41.2"
fastapi = "^0.114.0"
python-dotenv = "^1.0.1"
pyaml-env = "^1.2.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.6"
pyjwt = "^2.9.0"
sib-api-v3-sdk = {extras = ["mypy"], version = "^7.6.0"}
pydantic = {extras = ["email"], version = "^2.9.0"}
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = "^5.4.0"
redis = "^5.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin",]
mypy_path= ["./backend"]
